fixed all layout bugs

--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -1,5 +1,6 @@
 body {
     max-width: 1920px;
+    margin: 0 auto;
 }
 
 .bg-image {
